# synthetic-scout

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  README_new.md  full_scan.txt  gitlab-ci.yml  main.py  pyproject.toml
.github/workflows/: qa.yml
plugins/: base.py  console_plugin.py  slack_plugin.py  telegram_plugin.py
reports/: summary.json
src/: __init__.py
src/core/: assertions.py  plugins_loader.py  registry.py  runner.py  settings.py
src/network/: __init__.py  db_client.py  health_checks.py  http_client.py
src/report/: html_formatter.py  reporter.py
src/web/: __init__.py  dashboard.py
tests/: auth_tests.py  content_tests.py  db_health_tests.py  smoke_tests.py  ssl_tests.py
