[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "it-tester"
version = "0.2.0"
description = "ULU QA EVOLVER V8 – IT Tester Motoru"
authors = [{name = "ULU EVOLVER"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "flask",
]

[tool.setuptools]
packages = ["core", "network", "report", "web", "plugins"]
