[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-scout"
version = "0.2.0"
description = "Synthetic monitoring tool for API health checks, SSL validation, and more."
authors = [{name = "ULU EVOLVER"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "flask",
]

[tool.setuptools]
packages = ["core", "network", "report", "web", "plugins"]
